<resources>
    <string name="app_name">meteo</string>
    <string name="loading">Loading</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="search_icon">search_icon</string>
    <string name="city_name">CITY NAME</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="visibility">Visibility</string>
    <string name="weather_icon">weatherIcon</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="sunset">Sunset</string>
</resources>